margin issues on mobile

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ a:hover {
 		.content-container {
 		width: 330px;
 		padding: 0px 30px 20px 30px;
-		margin: 50px 10px 50px 0px;
+		margin: 50px 0px 50px 0px;
 	}
 		.fancy-stuff {
 		margin: 0px 0px 0px 40px;
